test/expected/xupc-error.out
cdecl> explain relaxed int x
               ^
9: error: "relaxed int" requires "shared"
